@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-07-24T01:18:51Z",
-  "count_outdated" : 2659,
-  "uniques_outdated" : 858,
+  "timestamp" : "2024-07-25T12:33:50Z",
+  "count_outdated" : 2660,
+  "uniques_outdated" : 859,
   "count" : 2670,
   "uniques" : 866,
   "views" : [
-    {
-      "timestamp": "2024-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-07-12T00:00:00Z",
       "count": 3,
