@@ -1,12 +1,7 @@
 {
-  "count": 11,
-  "uniques": 8,
+  "count": 10,
+  "uniques": 7,
   "views": [
-    {
-      "timestamp": "2024-07-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-07-12T00:00:00Z",
       "count": 3,
